# eeve

./: .gitignore  .travis.yml  README.md  README.rst  bumpversion.py  pyproject.toml  requirements.txt  run.py  setup.py  tox.ini
eeve/: __init__.py  __main__.py  action.py  base_classes.py  database.py  eeve events.txt  eeve.py  event.py  helpers.py  importer.py  mappings.py  taskinfo.py  variable.py  wrapper.py
eeve/eeve actions/: REST_request.py  activity_logger.py  changePowerPlan.py  exit_eeve.py  if_action.py  list_dir.py  play_audio.py  python_loader.py  random_actions.py  reloader.py  run.py  send_keys.py  set_var.py  start_process.py  test_action.py  wait_action.py
eeve/eeve actions/eeve_GUI/: EditAction.qml  EditEvent.qml  EditTrigger.qml  Events.qml  Login.qml  Login.qmlc  __init__.py  main.pyproject  main.qml  main.qmlc  style.py
eeve/eeve actions/eeve_GUI/Controllers/: EditActionController.py  EditEventController.py  EditTriggerController.py  EventsController.py  LoginController.py
eeve/eeve actions/eeve_GUI/Views/: EditAction.qml  EditEvent.qml  EditTrigger.qml  Events.qml  FileDialog.py  Login.qml  PressAndHoldButton.qml  main.qml
eeve/eeve plugins/: activity_logger.py  open_web_page.py  tp-interface.py
eeve/eeve plugins/win_key_hook/: __init__.py  __main__.py  input_parser.py  key_map.py
eeve/eeve triggers/: broadcastCatcher.py  on_start.py  rawinput.py  structs.py  timer_trigger.py
tests/: test_batata.py  test_database.py  test_gui.py
