[tool.poetry]
name = "eeve"
version = "1.1.0"
description = "A flexible, powerfull and simple event trigger"
authors = ["Victor Marcelino <victor.fmarcelino@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/vMarcelino/eeve"

[tool.poetry.dependencies]
python = ">=3.6"
travel-backpack = ">=0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
